--- a/wally.toml
+++ b/wally.toml
@@ -1,19 +1,19 @@
 [package]
-name = "4x8matrix/command-o"
+name = "4x8matrix/chat-commands"
 version = "1.0.0"
 realm = "shared"
 registry = "https://github.com/upliftgames/wally-index"
 licence = "Unlicense"
 authors = ["AsynchronousMatrix"]
 
-description = ""
+description = "A simple OOP Chat Commands framework to easily add Chat Commands"
 
 exclude = ["**"]
 include = ["Source", "Source/*", "default.project.json", "wally.lock", "wally.toml", "LICENCE", "README.md"]
 
-[dev-dependencies]
-TestEz = "roblox/testez@0.4.1"
-EmoticonReporter = "4x8matrix/emoticon-reporter@1.0.0"
+# [dev-dependencies]
+# TestEz = "roblox/testez@0.4.1"
+# EmoticonReporter = "4x8matrix/emoticon-reporter@1.0.0"
 
 [dependencies]
 Signal = "sleitnick/signal@1.5.0"
